--- a/style.css
+++ b/style.css
@@ -1,5 +1,13 @@
 :root {
-    /* Custom pairs */
+    --step--2: clamp(0.78rem, calc(0.77rem + 0.03vw), 0.80rem);
+    --step--1: clamp(0.94rem, calc(0.92rem + 0.11vw), 1.00rem);
+    --step-0: clamp(1.13rem, calc(1.08rem + 0.22vw), 1.25rem);
+    --step-1: clamp(1.35rem, calc(1.28rem + 0.37vw), 1.56rem);
+    --step-2: clamp(1.62rem, calc(1.50rem + 0.58vw), 1.95rem);
+    --step-3: clamp(1.94rem, calc(1.77rem + 0.87vw), 2.44rem);
+    --step-4: clamp(2.33rem, calc(2.08rem + 1.25vw), 3.05rem);
+    --step-5: clamp(2.80rem, calc(2.45rem + 1.77vw), 3.82rem);
+
     --base-font: sans-serif;
     --color-fg: #293241;
     --color-bg: #E0FBFC;
@@ -10,15 +18,41 @@ body {
     font-family: var(--base-font);
     color: var(--color-bg);
     background-color: var(--color-fg);
-    align-items: center;
-    margin-left: 43%;
-    margin-right: 33%;
+    text-align: center;
+}
+
+h1 {
+    font-size: var(--step-5);
+    text-align: center;
+}
+
+h2 {
+    font-size: var(--step-3);
 }
 
 a {
     color: var(--color-a);
 }
 
-li {
+li,
+p {
     list-style: none;
+    font-size: var(--step-1);
+}
+
+img {
+    max-width: 60%;
+    max-height: 60%
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: auto auto;
+}
+
+@media screen and (max-width: 600px) {
+    .grid {
+        grid-template-columns: auto;
+        text-align: left;
+    }
 }
