--- a/style.css
+++ b/style.css
@@ -36,27 +36,30 @@ a {
     color: var(--color-a);
 }
 
-li,
 p {
     margin-top: 1rem;
-    list-style: none;
     font-size: var(--step-1);
 }
 
 ul {
-    padding: 0;
+    list-style: none;
 }
+
+
 
 img {
     max-width: 60%;
     max-height: 60%
 }
 
+.card {}
+
 .grid {
     display: grid;
     grid-template-columns: auto auto;
-
 }
+
+
 
 @media screen and (max-width: 600px) {
     .grid {
