--- a/style.css
+++ b/style.css
@@ -147,6 +147,7 @@ footer p {
 }
 
 .hero-image {
+    transition: 3s;
     flex: 0.6;
 }
 
@@ -156,6 +157,11 @@ footer p {
     height: 500px;
     object-fit: cover;
     border-radius: 50%;
+}
+
+.hero-image:hover {
+    transform: scale(1.2);
+    transition: 3s;
 }
 
 .projects-container {
