--- a/style.css
+++ b/style.css
@@ -76,6 +76,8 @@ header {
     margin: 0;
     font-size: var(--step-2);
     transition: color 0.3s ease;
+    text-decoration: none;
+    color: white;
 }
 
 .nav-menu ul {
