--- a/style.css
+++ b/style.css
@@ -223,12 +223,41 @@ header {
     height: 500px;
     object-fit: cover;
     border-radius: 50%;
+    animation: beating 3s infinite;
 }
 
-.hero-image:hover {
-    transform: scale(1.2);
-    transition: 3s;
-    filter: brightness(2.2);
+@keyframes beating {
+    0% {
+        transform: scale(1);
+    }
+
+    50% {
+        filter: brightness(1.5) drop-shadow(0 0 50px black);
+        transform: scale(1.2);
+    }
+
+    100% {
+        transform: scale(1);
+    }
+}
+
+@keyframes overlay {
+    0% {
+        filter: brightness(1);
+    }
+
+    100% {
+        filter: brightness(0);
+    }
+
+}
+
+body.dark-overlay {
+    animation: overlay 15s infinite;
+}
+
+.hero-image img:hover {
+    animation-play-state: paused;
 }
 
 .projects-container {
