--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 :root {
-    --step--2: clamp(0.78rem, calc(0.77rem + 0.03vw), 0.80rem);
-    --step--1: clamp(0.94rem, calc(0.92rem + 0.11vw), 1.00rem);
-    --step-0: clamp(1.13rem, calc(1.08rem + 0.22vw), 1.25rem);
-    --step-1: clamp(1.35rem, calc(1.28rem + 0.37vw), 1.56rem);
-    --step-2: clamp(1.62rem, calc(1.50rem + 0.58vw), 1.95rem);
-    --step-3: clamp(1.94rem, calc(1.77rem + 0.87vw), 2.44rem);
-    --step-4: clamp(2.33rem, calc(2.08rem + 1.25vw), 3.05rem);
-    --step-5: clamp(2.80rem, calc(2.45rem + 1.77vw), 3.82rem);
+    --step--2: clamp(0.5556rem, 1.1386rem + -0.7523vi, 0.9882rem);
+    --step--1: clamp(0.8333rem, 1.1312rem + -0.3844vi, 1.0544rem);
+    --step-0: clamp(1.125rem, 1.0815rem + 0.2174vi, 1.25rem);
+    --step-1: clamp(1.2004rem, 0.9657rem + 1.1733vi, 1.875rem);
+    --step-2: clamp(1.2808rem, 0.748rem + 2.6638vi, 2.8125rem);
+    --step-3: clamp(1.3666rem, 0.3746rem + 4.9602vi, 4.2188rem);
+    --step-4: clamp(1.4582rem, -0.2357rem + 8.4695vi, 6.3281rem);
+    --step-5: clamp(1.5559rem, -1.2046rem + 13.8023vi, 9.4922rem);
 
     --color-fg: #293241;
     --color-bg: #E0FBFC;
@@ -43,12 +43,6 @@ body {
     font-size: var(--step-2);
 }
 
-header h1 {
-    margin: 0;
-    padding: 0;
-    font-size: var(--step-2);
-}
-
 footer {
     background-color: var(--color-fg);
     padding: 20px 0;
@@ -72,9 +66,11 @@ header {
     transition: background-color 0.3s ease;
     position: sticky;
     top: 0;
+
 }
 
 .header-container {
+
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -84,7 +80,7 @@ header {
 
 .logo {
     margin: 0;
-    font-size: var(--step-2);
+    font-size: 2vw;
     transition: color 0.3s ease;
     text-decoration: none;
     color: white;
@@ -108,7 +104,7 @@ header {
 .nav-menu a {
     color: white;
     text-decoration: none;
-    font-size: var(--step-1);
+    font-size: 1.5vw;
     transition: color 0.3s ease;
 }
 
@@ -219,8 +215,8 @@ header {
 
 .hero-image img {
     object-position: center 20%;
-    width: 500px;
-    height: 500px;
+    width: 30vw;
+    height: 30vw;
     object-fit: cover;
     border-radius: 50%;
     animation: beating 3s infinite;
